// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example composer (end-to-end) honors appendClientSuffix param 1`] = `
"import 'dart:async';
import 'client.dart';

void myMessageHandler(String message) {
  print('====================');
  print('Just proving I got the message in myMessageHandler: $message');
  print('====================');
}

void myErrorHandler(Object error) {
  print('Errors from WebSocket: $error');
}

Future<void> main() async {
  final hoppscotchEchoWebSocketClientClient = HoppscotchEchoWebSocketClientClient();
  hoppscotchEchoWebSocketClientClient.registerMessageHandler(myMessageHandler);
  hoppscotchEchoWebSocketClientClient.registerErrorHandler(myErrorHandler);

  try {
    await hoppscotchEchoWebSocketClientClient.connect();

    for (var i = 0; i < 5; i++) {
      try {
        hoppscotchEchoWebSocketClientClient.sendEchoMessage('test');
      } catch (error) {
        print('Error while sending message: $error');
      }
      await Future.delayed(Duration(seconds: 5));
    }
  } catch (error) {
    print('Failed to connect to WebSocket: $error');
  } finally {
    hoppscotchEchoWebSocketClientClient.close();
  }
}"
`;

exports[`Example composer (end-to-end) honors customClientName param 1`] = `
"import 'dart:async';
import 'client.dart';

void myMessageHandler(String message) {
  print('====================');
  print('Just proving I got the message in myMessageHandler: $message');
  print('====================');
}

void myErrorHandler(Object error) {
  print('Errors from WebSocket: $error');
}

Future<void> main() async {
  final myEchoClient = MyEchoClient();
  myEchoClient.registerMessageHandler(myMessageHandler);
  myEchoClient.registerErrorHandler(myErrorHandler);

  try {
    await myEchoClient.connect();

    for (var i = 0; i < 5; i++) {
      try {
        myEchoClient.sendEchoMessage('test');
      } catch (error) {
        print('Error while sending message: $error');
      }
      await Future.delayed(Duration(seconds: 5));
    }
  } catch (error) {
    print('Failed to connect to WebSocket: $error');
  } finally {
    myEchoClient.close();
  }
}"
`;

exports[`Example composer (end-to-end) registers message handler for send op with reply (postman echo) 1`] = `
"import 'dart:async';
import 'client.dart';

void myMessageHandler(String message) {
  print('====================');
  print('Just proving I got the message in myMessageHandler: $message');
  print('====================');
}

void myErrorHandler(Object error) {
  print('Errors from WebSocket: $error');
}

Future<void> main() async {
  final postmanEchoWebSocketClientClient = PostmanEchoWebSocketClientClient();
  postmanEchoWebSocketClientClient.registerMessageHandler(myMessageHandler);
  postmanEchoWebSocketClientClient.registerErrorHandler(myErrorHandler);

  try {
    await postmanEchoWebSocketClientClient.connect();

    for (var i = 0; i < 5; i++) {
      try {
        postmanEchoWebSocketClientClient.sendEchoMessage('test');
      } catch (error) {
        print('Error while sending message: $error');
      }
      await Future.delayed(Duration(seconds: 5));
    }
  } catch (error) {
    print('Failed to connect to WebSocket: $error');
  } finally {
    postmanEchoWebSocketClientClient.close();
  }
}"
`;

exports[`Example composer (end-to-end) renders full example.dart for hoppscotch (send+receive) with default params 1`] = `
"import 'dart:async';
import 'client.dart';

void myMessageHandler(String message) {
  print('====================');
  print('Just proving I got the message in myMessageHandler: $message');
  print('====================');
}

void myErrorHandler(Object error) {
  print('Errors from WebSocket: $error');
}

Future<void> main() async {
  final hoppscotchEchoWebSocketClient = HoppscotchEchoWebSocketClient();
  hoppscotchEchoWebSocketClient.registerMessageHandler(myMessageHandler);
  hoppscotchEchoWebSocketClient.registerErrorHandler(myErrorHandler);

  try {
    await hoppscotchEchoWebSocketClient.connect();

    for (var i = 0; i < 5; i++) {
      try {
        hoppscotchEchoWebSocketClient.sendEchoMessage('test');
      } catch (error) {
        print('Error while sending message: $error');
      }
      await Future.delayed(Duration(seconds: 5));
    }
  } catch (error) {
    print('Failed to connect to WebSocket: $error');
  } finally {
    hoppscotchEchoWebSocketClient.close();
  }
}"
`;
